Front-end for validation of unique email address via API GET. Related improvements/refactoring of validation on the front-end to centralize logic in main.js. Restore if statement around roles in profile so section is only shown to admins.

--- a/portal/templates/flask_user/_macros.html
+++ b/portal/templates/flask_user/_macros.html
@@ -5,15 +5,17 @@
             <label for="{{ field.id }}" class="control-label">{{ label|safe }}</label>
         {% endif %}
         {{ field(class_='form-control', placeholder=label, **kwargs) }}
-        {% if field.errors %}
-            {% for e in field.errors %}
-                <span class="help-block">{{ e }}</span>
-            {% endfor %}
-        {% else %}
-            {% if helpText %}
-            <span class="help-block">{{ helpText|safe }}</span>
+        <div class="help-block with-errors" id="error{{ field.id }}">
+            {% if field.errors %}
+                {% for e in field.errors %}
+                    <span>{{ e }}</span>
+                {% endfor %}
+            {% else %}
+                {% if helpText %}
+                    <span>{{ helpText|safe }}</span>
+                {% endif %}
             {% endif %}
-        {% endif %}
+        </div>
     </div>
 {%- endmacro %}
  
