--- a/portal/templates/initial_queries.html
+++ b/portal/templates/initial_queries.html
@@ -70,7 +70,7 @@
           <input class="form-control bd-element" id="year" name="birthdayYear" placeholder="YYYY" type="text" maxlength="4" data-birthday="true" required />
         </div>
       </div>
-      <span id="bdError" class="help-block tnth-hide">A block of help text that breaks onto a new line and may extend beyond one line.</span>
+      <span id="errorbirthday" class="help-block tnth-hide">A block of help text that breaks onto a new line and may extend beyond one line.</span>
     </div>
 
 
