--- a/portal/templates/layout.html
+++ b/portal/templates/layout.html
@@ -108,6 +108,6 @@ $(document).ready(function(){
 });
 {% endblock %}
 </script>
-{% if config.version %}<!--Shared services version: {{config.version}}-->{% endif %}
+{% if config.metadata.version %}<!--Shared services version: {{config.metadata.version}}-->{% endif %}
 </body>
 </html>
