Fix for https://www.pivotaltracker.com/projects/1225464/stories/121454301
truenth_authenticated now defined in all calls to
/api/portal-wrapper-html/

--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -1,5 +1,8 @@
 <link rel="stylesheet" href="{{PORTAL}}{{ url_for('static', filename='css/topnav.css') }}">
 <script src="{{PORTAL}}{{ url_for('static', filename='js/tnth.js') }}"></script>
+<script type="text/javascript">
+    var truenth_authenticated = {% if user %} true;{% else %} false;{% endif %}
+</script>
 {% if config.PIWIK_SITEID %}
 <script type="text/javascript">
     var _paq = _paq || [];
