--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -51,8 +51,19 @@ a:hover, a:active {
 // Used for admin tables or other place where we don't need the large font size
 .smaller-text {
   font-size: @smallerText;
+  .form-control {
+    font-size: @smallerText;
+    height: @smallerText * 2;
+  }
+  .btn {
+    font-size: @smallerText;
+  }
 }
-
+.table-title {
+  font-weight: bold;
+  font-size: @baseFontSize;
+  line-height: @baseFontSize * 1.33;
+}
 .feature-btn {
   transition: all 0.2s ease-in-out 0s;
   -webkit-transition: all 0.2s ease-in-out 0s;
@@ -433,19 +444,6 @@ a:hover, a:active {
   .tnth-subhead {
     font-size: @lgsubheadSize;
   }
-  /** Unless explicitly wrapped in reduce-font-sizes class **/
-  .reduce-font-sizes {
-    body & {
-      font-size: @baseFontSize;
-    }
-    .tnth-headline {
-      font-size: @headlineSize;
-    }
-    .tnth-subhead {
-      font-size: @subheadSize;
-    }
-  }
-
   #fullSizeContainer {
     padding: 30px 0;
   }
@@ -478,6 +476,22 @@ a:hover, a:active {
 
   .form-group input[type=checkbox], .form-group  input[type=radio] {
     margin-top: 9px;
+  }
+
+  /** Unless explicitly wrapped in reduce-font-sizes class **/
+  .reduce-font-sizes {
+    body & {
+      font-size: @baseFontSize;
+    }
+    .tnth-headline {
+      font-size: @headlineSize;
+    }
+    .tnth-subhead {
+      font-size: @subheadSize;
+    }
+    .form-group input[type=checkbox], .form-group  input[type=radio] {
+      margin-top: 4px;
+    }
   }
 }
 @media (min-width: 1200px) {
