Another minor text change in portal.

--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -29,7 +29,7 @@
     -->
     <h2 class="tnth-subhead">Treatment decision tool</h2>
     <p>Understand which treatment best suits you, and learn how to discuss your options with your doctors</p>
-    <a class="btn-lg btn-tnth-primary" href="{{ intervention.card_url }}">{{ intervention.card_html }}</a>
+    <a class="btn-lg btn-tnth-primary" href="{{ intervention.card_url }}">View treatment decision tool</a>
 
 </div>
 {% endif %}
@@ -44,7 +44,7 @@
     -->
     <h2 class="tnth-subhead">Symptom checkup tool</h2>
     <p>Understand how to manage the symptoms of your prostate cancer, and find out how you compare to others</p>
-    <a class="btn-lg btn-tnth-primary" href="{{ intervention.card_url }}">{{ intervention.card_html }}</a>
+    <a class="btn-lg btn-tnth-primary" href="{{ intervention.card_url }}">View symptom checkup tool</a>
 </div>
 {% endif %}
 
