Use get_card_html(user) to obtain the best card_html for front end display.
Interventions have a card_html field for intervention wide customization.
Further customization is avaliable per user by setting the
UserIntervention.card_html value for the respective user and intervention
(set via the ``/api/intervention/<intervention_name>`` endpoint)

--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -15,7 +15,7 @@
 <div class="portal-item">
     <h2 class="tnth-subhead">Sexual Recovery</h2>
     <p>Learn strategies for developing a new normal in your sex life after treatment for prostate cancer.</p>
-    <a class="btn-lg btn-tnth-primary" href="{{ intervention.card_url }}">{{ intervention.card_html }}</a>
+    <a class="btn-lg btn-tnth-primary" href="{{ intervention.card_url }}">{{ intervention.get_card_html(user) }}</a>
 </div>
 {% endif %}
 
