Adding content_manager to list of roles editable in profile.html

--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -269,6 +269,11 @@ My TrueNTH Profile
         </div>
         <div class="checkbox">
             <label>
+                <input type="checkbox" name="user_type" value="content_manager"> Content Manager
+            </label>
+        </div>
+        <div class="checkbox">
+            <label>
                 <input type="checkbox" name="user_type" value="test"> Test
             </label>
         </div>
