Fixed bug in coredata.html, was calling js fxn assembleContent.coreDataProc instead of assembleContent.coreDataProcedure

--- a/portal/templates/coredata.html
+++ b/portal/templates/coredata.html
@@ -129,7 +129,7 @@ $(document).ready(function(){
         assembleContent.coreData({{ user.id }});
         {% endif %}
         {% if 'procedure' in require %}
-        assembleContent.coreDataProc({{ user.id }});
+        assembleContent.coreDataProcedure({{ user.id }});
         {% endif %}
     });
 
