Verbiage change in acquire core data page

--- a/portal/templates/coredata.html
+++ b/portal/templates/coredata.html
@@ -7,7 +7,7 @@
 </div>
 
 <h3 class="tnth-headline">
-Acquire Core Data
+The TrueNTH system asks these questions in order to give you information that best fits <b>you</b>. You may skip any question you prefer not to answer.
 </h3>
 
 <form id="profileForm" class="form tnth-form" role="form" method="POST">
