Verbiage change in procedure core data capture

--- a/portal/templates/coredata.html
+++ b/portal/templates/coredata.html
@@ -75,7 +75,7 @@ The TrueNTH system asks these questions in order to give you information that be
 
         {% if 'procedure' in require %}
         <div class="form-group" id="userProcedure">
-            <label>Procedures<span class="text-muted smaller-text"></span></label>
+            <label>Which of the following is your primary prostate cancer treatment or approach?<span class="text-muted smaller-text"></span></label>
             <div style="margin-top: -10px">
 
                 <div class="checkbox">
