Added new (coded) procedures to coredata form

--- a/portal/templates/coredata.html
+++ b/portal/templates/coredata.html
@@ -81,6 +81,13 @@ The TrueNTH system asks these questions in order to give you information that be
                 <div class="checkbox">
                     <label>
                         <input type="radio" name="procedure"
+                        display="Watchful waiting" value="373818007">
+                        Watchful waiting 
+                    </label>
+                </div>
+                <div class="checkbox">
+                    <label>
+                        <input type="radio" name="procedure"
                         display="Active surveillance" value="424313000">
                         Active surveillance
                     </label>
@@ -95,8 +102,22 @@ The TrueNTH system asks these questions in order to give you information that be
                 <div class="checkbox">
                     <label>
                         <input type="radio" name="procedure"
+                        display="External beam radiation therapy" value="33195004">
+                        External beam radiation therapy
+                    </label>
+                </div>
+                <div class="checkbox">
+                    <label>
+                        <input type="radio" name="procedure"
                         display="Brachytherapy" value="228748004">
                         Brachytherapy
+                    </label>
+                </div>
+                <div class="checkbox">
+                    <label>
+                        <input type="radio" name="procedure"
+                        display="Androgen deprivation therapy" value="707266006">
+                        Androgen deprivation therapy
                     </label>
                 </div>
             </div>
