coredata for procedures: changing to from radios to checkboxes. A later iteration can distinguish primary.

--- a/portal/templates/coredata.html
+++ b/portal/templates/coredata.html
@@ -75,47 +75,47 @@ The TrueNTH system asks these questions in order to give you information that be
 
         {% if 'procedure' in require %}
         <div class="form-group" id="userProcedure">
-            <label>Which of the following is your primary prostate cancer treatment or approach?<span class="text-muted smaller-text"></span></label>
+            <label>Which of the following prostate cancer treatments have you had, if any?<span class="text-muted smaller-text"></span></label>
             <div style="margin-top: -10px">
 
                 <div class="checkbox">
                     <label>
-                        <input type="radio" name="procedure"
+                        <input type="checkbox" name="procedure"
                         display="Watchful waiting" value="373818007">
                         Watchful waiting 
                     </label>
                 </div>
                 <div class="checkbox">
                     <label>
-                        <input type="radio" name="procedure"
+                        <input type="checkbox" name="procedure"
                         display="Active surveillance" value="424313000">
                         Active surveillance
                     </label>
                 </div>
                 <div class="checkbox">
                     <label>
-                        <input type="radio" name="procedure"
+                        <input type="checkbox" name="procedure"
                         display="Radical prostatectomy" value="26294005">
                         Radical prostatectomy
                     </label>
                 </div>
                 <div class="checkbox">
                     <label>
-                        <input type="radio" name="procedure"
+                        <input type="checkbox" name="procedure"
                         display="External beam radiation therapy" value="33195004">
                         External beam radiation therapy
                     </label>
                 </div>
                 <div class="checkbox">
                     <label>
-                        <input type="radio" name="procedure"
+                        <input type="checkbox" name="procedure"
                         display="Brachytherapy" value="228748004">
                         Brachytherapy
                     </label>
                 </div>
                 <div class="checkbox">
                     <label>
-                        <input type="radio" name="procedure"
+                        <input type="checkbox" name="procedure"
                         display="Androgen deprivation therapy" value="707266006">
                         Androgen deprivation therapy
                     </label>
