--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -34,11 +34,10 @@
     <!--
     <h2 class="tnth-subhead">Decision Support (P3P)</h2>
     <p>You are unique, and you have your own set of values and preferences. Learn which treatment options might best suit your specific needs and concerns, and watch examples of how patients discuss similar concerns with their urology doctors.</p>
-    <a class="btn-lg btn-tnth-primary" href="{{ intervention.card_url }}">{{ intervention.card_html }}</a>
     -->
     <h2 class="tnth-subhead">Treatment decision tool</h2>
     <p>Understand which treatment best suits you, and learn how to discuss your options with your doctors</p>
-    <a class="btn-lg btn-tnth-primary" href="{{ intervention.card_url }}">View treatment decision tool</a>
+    <a class="btn-lg btn-tnth-primary" href="{{ intervention.card_url }}">{{ intervention.get_card_html(user) }}</a>
 
 </div>
 {% endif %}
@@ -49,11 +48,10 @@
     <!--
     <h2 class="tnth-subhead">Self Management</h2>
     <p>Assess the severity of your symptoms, and the extent to which they bother you, in a variety of areas common to men who have been treated for prostate cancer. Learn strategies to address those symptoms, specifically for men like you.</p>
-    <a class="btn-lg btn-tnth-primary" href="{{ intervention.card_url }}">{{ intervention.card_html }}</a>
     -->
     <h2 class="tnth-subhead">Symptom checkup tool</h2>
     <p>Understand how to manage the symptoms of your prostate cancer, and find out how you compare to others</p>
-    <a class="btn-lg btn-tnth-primary" href="{{ intervention.card_url }}">View symptom checkup tool</a>
+    <a class="btn-lg btn-tnth-primary" href="{{ intervention.card_url }}">{{ intervention.get_card_html(user) }}</a>
 </div>
 {% endif %}
 
