--- a/portal/templates/coredata.html
+++ b/portal/templates/coredata.html
@@ -74,7 +74,8 @@ The TrueNTH system asks these questions in order to give you information that be
         {% endif %}
 
         {% if 'procedure' in require %}
-        <div id="userProcedures">This is the userProcedures div<br/>
+        <label>Which of the following prostate cancer treatments have you had, if any?<span class="text-muted smaller-text"></span></label>
+        <div id="userProcedures">Your procedures:<br/>
         </div>
         <div class="form-group" id="userProcedure">
             <label>Which of the following prostate cancer treatments have you had, if any?<span class="text-muted smaller-text"></span></label>
