--- a/portal/templates/coredata.html
+++ b/portal/templates/coredata.html
@@ -75,9 +75,24 @@ The TrueNTH system asks these questions in order to give you information that be
 
         {% if 'procedure' in require %}
         <script src="{{ url_for('static', filename='js/procedures.js') }}"></script>
-        <label>Which of the following prostate cancer treatments have you had, if any?<span class="text-muted smaller-text"></span></label>
+        <label>Which of the following prostate cancer treatments have you had, if any? If you don&#39;t remember the exact date, please make your best guess.<span class="text-muted smaller-text"></span></label>
         <div id="userProcedures">Your procedures:<br/>
         </div>
+
+<h4 class="event-q-header">Add New Procedure</h4>
+<form class="form-inline event-element" style='margin: 1em 0 0 2em'>
+    <div class='form-group'><select class='event-question form-control' id='tnthproc'>
+<option value=''>Select Procedure...</option>
+<option value='373818007'>Started watchful waiting</option>
+<option value='424313000'>Started active surveillance</option>
+<option value='26294005'>Radical prostatectomy</option>
+<option value='33195004'>External beam radiation therapy</option>
+<option value='228748004'>Brachytherapy</option>
+<option value='707266006'>Androgen deprivation therapy</option>
+</select></div> &nbsp;<div class='form-group'><label>Date: <input class='datep event-value ' type='text' placeholder='MM/DD/YYYY' maxlength='10' id='tnthproc-date' name='tnthproc-date' /></label></div> &nbsp; <button class='btn btn-default disabled' id='tnthproc-submit' name='tnthproc'data-name='' data-date='' data-date-read='' disabled><i class='fa fa-plus'></i> Add Procedure</button></form>
+
+
+
         <div class="form-group" id="userProcedure">
             <label>Which of the following prostate cancer treatments have you had, if any?<span class="text-muted smaller-text"></span></label>
             <div style="margin-top: -10px">
