--- a/portal/templates/coredata.html
+++ b/portal/templates/coredata.html
@@ -10,10 +10,9 @@
 The TrueNTH system asks these questions in order to give you information that best fits <b>you</b>. You may skip any question you prefer not to answer.
 </h3>
 
-<form id="profileForm" class="form tnth-form" role="form" method="POST">
-
 <div class="row" style="position: relative;">
     <div class="col-md-9">
+<form id="profileForm" class="form tnth-form" role="form" method="POST">
         {% if 'ethnicity' in require %}
         <div class="form-group" id="userEthnicity">
             <label>Ethnicity <span class="text-muted smaller-text"></span></label>
@@ -72,6 +71,9 @@ The TrueNTH system asks these questions in order to give you information that be
             </div>
         </div>
         {% endif %}
+<br />
+<button id="updateData" type="submit" class="btn btn-lg btn-tnth-primary">Save</button> <span id="confirmMsg" class="text-muted tnth-hide smaller-text">&nbsp;&nbsp;<em>Saved</em></span>
+</form>
 
         {% if 'procedure' in require %}
         <script src="{{ url_for('static', filename='js/procedures.js') }}"></script>
@@ -91,65 +93,10 @@ The TrueNTH system asks these questions in order to give you information that be
 <option value='707266006'>Androgen deprivation therapy</option>
 </select></div> &nbsp;<div class='form-group'><label>Date: <input class='datep event-value ' type='text' placeholder='MM/DD/YYYY' maxlength='10' id='tnthproc-date' name='tnthproc-date' /></label></div> &nbsp; <button class='btn btn-default disabled' id='tnthproc-submit' name='tnthproc'data-name='' data-date='' data-date-read='' disabled><i class='fa fa-plus'></i> Add Procedure</button></form>
 
-
-
-        <div class="form-group" id="userProcedure">
-            <label>Which of the following prostate cancer treatments have you had, if any?<span class="text-muted smaller-text"></span></label>
-            <div style="margin-top: -10px">
-
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox" name="procedure"
-                        display="Watchful waiting" value="373818007">
-                        Watchful waiting 
-                    </label>
-                </div>
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox" name="procedure"
-                        display="Active surveillance" value="424313000">
-                        Active surveillance
-                    </label>
-                </div>
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox" name="procedure"
-                        display="Radical prostatectomy" value="26294005">
-                        Radical prostatectomy
-                    </label>
-                </div>
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox" name="procedure"
-                        display="External beam radiation therapy" value="33195004">
-                        External beam radiation therapy
-                    </label>
-                </div>
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox" name="procedure"
-                        display="Brachytherapy" value="228748004">
-                        Brachytherapy
-                    </label>
-                </div>
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox" name="procedure"
-                        display="Androgen deprivation therapy" value="707266006">
-                        Androgen deprivation therapy
-                    </label>
-                </div>
-            </div>
-        </div>
         {% endif %}
     </div>
 </div>
 
-<br />
-<button id="updateData" type="submit" class="btn btn-lg btn-tnth-primary">Save</button> <span id="confirmMsg" class="text-muted tnth-hide smaller-text">&nbsp;&nbsp;<em>Saved</em></span>
-
-
-</form>
 
 {% endblock %}
 
@@ -169,7 +116,7 @@ $(document).ready(function(){
         assembleContent.coreData({{ user.id }});
         {% endif %}
         {% if 'procedure' in require %}
-        assembleContent.coreDataProcedure({{ user.id }});
+        assembleContent.coreDataProcedure({{ user.id }}); // todo remove this?
         {% endif %}
     });
 
