--- a/portal/templates/coredata.html
+++ b/portal/templates/coredata.html
@@ -105,6 +105,8 @@ The TrueNTH system asks these questions in order to give you information that be
 {% block document_ready %}
 $(document).ready(function(){
 
+    var subjectId = {{ user.id }};
+
     {% if ('race' in require) or ('ethnicity' in require) %}
     tnthAjax.getDemo({{ user.id }});
     {% endif %}
